[fix] flex wrap for smaller devices

--- a/sass/pages/_books.scss
+++ b/sass/pages/_books.scss
@@ -13,4 +13,8 @@
   justify-content: space-evenly;
   border-bottom: 0.3rem solid black;
   background-color: #222222;
+
+  @media screen and (max-width: 110em) {
+    flex-wrap: wrap;
+  }
 }
